Index page update

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <body>
     <div id="loader"></div>
 
-    <section id="top">
+    <!-- <section id="top">
         <div class="top-bar">
             <div class="top-left">
                 <span><a>(+387) 66 794 308</a></span>
                 <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
             </div>
-            <!-- <div class="top-right">
-                <a href="#"><img src="images/facebook-icon.png" alt="Facebook" class="social-icon"></a>
+            <div class="top-right">
+               <a href="#"><img src="images/facebook-icon.png" alt="Facebook" class="social-icon"></a>
                 <a href="https://www.instagram.com/agnesededonatis/" target="_blank"><img src="images/instagram-icon.png" alt="Instagram" class="social-icon"></a>
                 <a href="#"><img src="images/italian-flag.png" alt="Italian" class="language-icon" id="italian-icon"></a>
-            </div> -->
+            </div>
         </div>
-    </section>
+    </section> -->
 
     <!--<div class="scroll-wrapper">
         <div class="scroll-arrow scroll-up"></div>
@@ -49,12 +49,13 @@
                 <li><a href="#support">Support</a></li>
             </ul>
         </div>
-        <div class="navbar-right">
-            <ul>
+        <div class="navbar-right">            
+            <!-- <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
+            <ul>    
                 <li><a href="#language" class="language"></a></li>
                 <li><a><img id="search-button" src="images/search-icon.png" alt="Search" class="search-icon"></a></li>
                 <li><a href="#profile"><img src="images/profile-icon.png" alt="Profile" class="profile"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </nav>
 
@@ -72,7 +73,7 @@
     <!-- Background overlay -->
     <div id="overlay" class="hidden"></div>
 
-                <section id="start">
+                <section id="start" class="start">
                     <div class="container">
                         <div class="vertical__content">
                             <div class="col col_left">
@@ -90,7 +91,7 @@
                             <div class="col col_left">
                                 <h1 class="vertical__heading"><span>Why SpeedNet Logistics</span></h1>
                                 <div class="vertical__item">
-                                    <p>As a global freight forwarder, DSV provides and manages supply chain solutions for thousands of companies every day. 
+                                    <p>As a global freight forwarder, SpeedNet Logistics provides and manages supply chain solutions for thousands of companies every day. 
                                         Whether you are a small family-run businesses or large global corporation we focus on keeping your supply chains 
                                         flowing through operational excellence and sustainable growth
                                     </p>
@@ -106,7 +107,7 @@
                                 <h1 class="vertical__heading"><span>Optimisation</span></h1>
                                 <div class="vertical__item">
                                     <p>
-                                        DSV provide optimised transportation and logistics solutions designed by our supply chain experts, 
+                                        SpeedNet Logistics provide optimised transportation and logistics solutions designed by our supply chain experts, 
                                         ensuring the right balance between costs, CO2 compensation, service levels, lead times and risk. 
                                         Our global network and strong partnerships provide you with a carrier mix tailored to your needs. 
                                         We ensure optimisation across all modes of transport through the insights of our local experts.
@@ -119,7 +120,9 @@
                                 <h1 class="vertical__heading"><span>Security and visibility</span></h1>
                                 <div class="vertical__item">
                                     <p>
-                                        In order to reduce your supply chain’s carbon footprint, DSV also provides consolidation, shift in transportation modes, load optimisation, container fill rates, and a global transportation network. With a team of industry experts, we are ready to design sustainable solutions that help you achieve a greener supply chain. 
+                                        In order to reduce your supply chain’s carbon footprint, SpeedNet Logistics also provides consolidation, 
+                                        shift in transportation modes, load optimisation, container fill rates, and a global transportation network. 
+                                        With a team of industry experts, we are ready to design sustainable solutions that help you achieve a greener supply chain. 
                                     </p>
                                 </div>
                             </div>
@@ -142,7 +145,7 @@
                                 <h1 class="vertical__heading"><span>Sustainability</span></h1>
                                 <div class="vertical__item">
                                     <p>
-                                        As a leader in transport and logistics, DSV has an important role to play in helping the industry transition 
+                                        As a leader in transport and logistics, SpeedNet Logicstics has an important role to play in helping the industry transition 
                                         to greener more environmentally friendly practices. We provide sustainable and efficient transport solutions through better planning, 
                                         new technologies and innovative solutions. 
                                         We work with sustainability across all areas of our business, from air, sea and road freight to contract logistics.
@@ -156,10 +159,12 @@
     <footer>
         <div class="footer-container">
             <div class="footer-left">
+                <span><a>(+387) 66 794 308</a></span>
             </div>
             <div class="footer-right">
                 <!-- <a>Website made by</a>
-                <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span> -->
+                <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span> -->                
+                <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
             </div>
         </div>
     </footer>    
