Index page update + contact.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="#sustainabilty">Sustainabilty</a></li>
                 <li><a href="#careers">Careers</a></li>
                 <li><a href="#aboutsnl">About SNL</a></li>
-                <li><a href="#support">Support</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="navbar-right">            
@@ -70,91 +70,83 @@
         </div>
     </div>
 
-    <!-- Background overlay -->
-    <div id="overlay" class="hidden"></div>
-
-                <section id="start" class="start">
-                    <div class="container">
-                        <div class="vertical__content">
-                            <div class="col col_left">
-                                <h1 class="vertical__heading"><span>Connect your business with the world</span></h1>
-                                <div class="vertical__item">
-                                    <p>It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>        
-                </section>
-                <section id="why">
-                    <div class="container">
-                        <div class="vertical__content">
-                            <div class="col col_left">
-                                <h1 class="vertical__heading"><span>Why SpeedNet Logistics</span></h1>
-                                <div class="vertical__item">
-                                    <p>As a global freight forwarder, SpeedNet Logistics provides and manages supply chain solutions for thousands of companies every day. 
-                                        Whether you are a small family-run businesses or large global corporation we focus on keeping your supply chains 
-                                        flowing through operational excellence and sustainable growth
-                                    </p>
-                                    <p>Our skilled people with industry know-how, modern warehouses, strong carrier relationships and a global network across 80
-                                     countries position us to better serve your needs. We help you achieve your business objectives through a unique blend of 
-                                     optimised and flexible solutions, combined with visibility tools, secure IT infrastructure and sustainability.
-                                    </p>
-                                </div>
-                            </div> 
-                        </div>  
-                        <div class="vertical__content">             
-                            <div class="col col_left">
-                                <h1 class="vertical__heading"><span>Optimisation</span></h1>
-                                <div class="vertical__item">
-                                    <p>
-                                        SpeedNet Logistics provide optimised transportation and logistics solutions designed by our supply chain experts, 
-                                        ensuring the right balance between costs, CO2 compensation, service levels, lead times and risk. 
-                                        Our global network and strong partnerships provide you with a carrier mix tailored to your needs. 
-                                        We ensure optimisation across all modes of transport through the insights of our local experts.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>  
-                        <div class="vertical__content"> 
-                            <div class="col col_left">
-                                <h1 class="vertical__heading"><span>Security and visibility</span></h1>
-                                <div class="vertical__item">
-                                    <p>
-                                        In order to reduce your supply chain’s carbon footprint, SpeedNet Logistics also provides consolidation, 
-                                        shift in transportation modes, load optimisation, container fill rates, and a global transportation network. 
-                                        With a team of industry experts, we are ready to design sustainable solutions that help you achieve a greener supply chain. 
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="vertical__content">             
-                            <div class="col col_left">
-                                <h1 class="vertical__heading"><span>Flexibility</span></h1>
-                                <div class="vertical__item">
-                                    <p>
-                                        SpeedNet Logistics has become experts at adapting to changing market conditions and providing flexible solutions to meet your business needs. 
-                                        Our business model is asset light. This means we can quickly scale activities to match changes in market demand. 
-                                        We can also pick the best suppliers for any service depending on factors like reliability, 
-                                        available capacity, transit time, sustainability factors and price.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>  
-                        <div class="vertical__content"> 
-                            <div class="col col_left">
-                                <h1 class="vertical__heading"><span>Sustainability</span></h1>
-                                <div class="vertical__item">
-                                    <p>
-                                        As a leader in transport and logistics, SpeedNet Logicstics has an important role to play in helping the industry transition 
-                                        to greener more environmentally friendly practices. We provide sustainable and efficient transport solutions through better planning, 
-                                        new technologies and innovative solutions. 
-                                        We work with sustainability across all areas of our business, from air, sea and road freight to contract logistics.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>  
-                </section>
+    <section id="start" class="start">
+        <div class="container">
+            <h1><span>Connect your business with the world</span></h1>
+            <p>It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
+        </div>    
+    </section>            
+    
+    <section id="why">
+        <div class="container">
+            <div class="vertical__content">
+                <div class="col col_left">
+                    <h1 class="vertical__heading"><span>Why SpeedNet Logistics</span></h1>
+                    <div class="vertical__item">
+                        <p>As a global freight forwarder, SpeedNet Logistics provides and manages supply chain solutions for thousands of companies every day. 
+                            Whether you are a small family-run businesses or large global corporation we focus on keeping your supply chains 
+                            flowing through operational excellence and sustainable growth
+                        </p>
+                        <p>Our skilled people with industry know-how, modern warehouses, strong carrier relationships and a global network across 80
+                         countries position us to better serve your needs. We help you achieve your business objectives through a unique blend of 
+                         optimised and flexible solutions, combined with visibility tools, secure IT infrastructure and sustainability.
+                        </p>
+                    </div>
+                </div> 
+            </div>  
+            <div class="vertical__content">             
+                <div class="col col_left">
+                    <h1 class="vertical__heading"><span>Optimisation</span></h1>
+                    <div class="vertical__item">
+                        <p>
+                            SpeedNet Logistics provide optimised transportation and logistics solutions designed by our supply chain experts, 
+                            ensuring the right balance between costs, CO2 compensation, service levels, lead times and risk. 
+                            Our global network and strong partnerships provide you with a carrier mix tailored to your needs. 
+                            We ensure optimisation across all modes of transport through the insights of our local experts.
+                        </p>
+                    </div>
+                </div>
+            </div>  
+            <div class="vertical__content"> 
+                <div class="col col_left">
+                    <h1 class="vertical__heading"><span>Security and visibility</span></h1>
+                    <div class="vertical__item">
+                        <p>
+                            In order to reduce your supply chain’s carbon footprint, SpeedNet Logistics also provides consolidation, 
+                            shift in transportation modes, load optimisation, container fill rates, and a global transportation network. 
+                            With a team of industry experts, we are ready to design sustainable solutions that help you achieve a greener supply chain. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical__content">             
+                <div class="col col_left">
+                    <h1 class="vertical__heading"><span>Flexibility</span></h1>
+                    <div class="vertical__item">
+                        <p>
+                            SpeedNet Logistics has become experts at adapting to changing market conditions and providing flexible solutions to meet your business needs. 
+                            Our business model is asset light. This means we can quickly scale activities to match changes in market demand. 
+                            We can also pick the best suppliers for any service depending on factors like reliability, 
+                            available capacity, transit time, sustainability factors and price.
+                        </p>
+                    </div>
+                </div>
+            </div>  
+            <div class="vertical__content"> 
+                <div class="col col_left">
+                    <h1 class="vertical__heading"><span>Sustainability</span></h1>
+                    <div class="vertical__item">
+                        <p>
+                            As a leader in transport and logistics, SpeedNet Logicstics has an important role to play in helping the industry transition 
+                            to greener more environmentally friendly practices. We provide sustainable and efficient transport solutions through better planning, 
+                            new technologies and innovative solutions. 
+                            We work with sustainability across all areas of our business, from air, sea and road freight to contract logistics.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </section>
 
     <footer>
         <div class="footer-container">
