--- a/contact.html
+++ b/contact.html
@@ -38,16 +38,10 @@
 
     <section id="contact" class="contact">
         <div class="container">
-            <div class="vertical__content">
-                <div class="col col_left">
-                    <h1 class="vertical__heading"><span>Contact</span></h1>
-                    <div class="vertical__item">
-                        <p>Contact</p>
-                    </div>
-                </div>
-            </div>
-        </div>        
-    </section>
+            <h1><span>Contact</span></h1>
+            <p>(+387) 66 794 308</p>
+        </div>    
+    </section>  
         
     <footer>
         <div class="footer-container">
