--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
         </div>
         <div class="navbar-center">
             <ul>
-                <li><a href="#why">Why SNL</a></li>
-                <li><a href="#solutions">Our solutions</a></li>
-                <li><a href="#insights">Insights</a></li>
-                <li><a href="#sustainabilty">Sustainabilty</a></li>
-                <li><a href="#careers">Careers</a></li>
-                <li><a href="#aboutsnl">About SNL</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a id="why_SNL" href="#why">Why SNL</a></li>
+                <li><a id="about" href="#aboutsnl">About us</a></li>
+                <li><a id="solutions" href="#solutions">Our solutions</a></li>
+                <li><a id="career" href="#careers">Careers</a></li>
+                <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="navbar-right">            
@@ -56,6 +54,14 @@
                 <li><a><img id="search-button" src="images/search-icon.png" alt="Search" class="search-icon"></a></li>
                 <li><a href="#profile"><img src="images/profile-icon.png" alt="Profile" class="profile"></a></li>
             </ul> -->
+            <div class="language-switcher">
+                <button onclick="changeLanguage('en')">
+                    <img src="images/english-flag.png" alt="English" class="flag-icon">
+                </button>
+                <button onclick="changeLanguage('sr')">
+                    <img src="images/bosnian-flag.png" alt="Bosnian" class="flag-icon">
+                </button>
+            </div>
         </div>
     </nav>
 
@@ -72,22 +78,22 @@
 
     <section id="start" class="start">
         <div class="container">
-            <h1><span>Connect your business with the world</span></h1>
-            <p>It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
+            <h1 id="start_h1"><span>Connect your business with the world</span></h1>
+            <p id="start_p1">It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
         </div>    
     </section>            
     
-    <section id="why">
+    <section id="why" class="why">
         <div class="container">
             <div class="vertical__content">
                 <div class="col col_left">
-                    <h1 class="vertical__heading"><span>Why SpeedNet Logistics</span></h1>
+                    <h1 id="why_SNL_h1" class="vertical__heading"><span>Why SpeedNet Logistics should be your transport and logistics company of choice?</span></h1>
                     <div class="vertical__item">
-                        <p>As a global freight forwarder, SpeedNet Logistics provides and manages supply chain solutions for thousands of companies every day. 
+                        <p id="why_SNL_p1">As a global freight forwarder, SpeedNet Logistics provides and manages supply chain solutions for thousands of companies every day. 
                             Whether you are a small family-run businesses or large global corporation we focus on keeping your supply chains 
                             flowing through operational excellence and sustainable growth
                         </p>
-                        <p>Our skilled people with industry know-how, modern warehouses, strong carrier relationships and a global network across 80
+                        <p id="why_SNL_p2">Our skilled people with industry know-how, modern warehouses, strong carrier relationships and a global network across 80
                          countries position us to better serve your needs. We help you achieve your business objectives through a unique blend of 
                          optimised and flexible solutions, combined with visibility tools, secure IT infrastructure and sustainability.
                         </p>
@@ -96,9 +102,9 @@
             </div>  
             <div class="vertical__content">             
                 <div class="col col_left">
-                    <h1 class="vertical__heading"><span>Optimisation</span></h1>
+                    <h1 id="opti_h1" class="vertical__heading"><span>Optimisation</span></h1>
                     <div class="vertical__item">
-                        <p>
+                        <p id="opti_p1">
                             SpeedNet Logistics provide optimised transportation and logistics solutions designed by our supply chain experts, 
                             ensuring the right balance between costs, CO2 compensation, service levels, lead times and risk. 
                             Our global network and strong partnerships provide you with a carrier mix tailored to your needs. 
@@ -109,9 +115,9 @@
             </div>  
             <div class="vertical__content"> 
                 <div class="col col_left">
-                    <h1 class="vertical__heading"><span>Security and visibility</span></h1>
+                    <h1 id="s_v_h1" class="vertical__heading"><span>Security and visibility</span></h1>
                     <div class="vertical__item">
-                        <p>
+                        <p id="s_v_p1">
                             In order to reduce your supply chain’s carbon footprint, SpeedNet Logistics also provides consolidation, 
                             shift in transportation modes, load optimisation, container fill rates, and a global transportation network. 
                             With a team of industry experts, we are ready to design sustainable solutions that help you achieve a greener supply chain. 
@@ -121,9 +127,9 @@
             </div>
             <div class="vertical__content">             
                 <div class="col col_left">
-                    <h1 class="vertical__heading"><span>Flexibility</span></h1>
+                    <h1 id="flex_h1" class="vertical__heading"><span>Flexibility</span></h1>
                     <div class="vertical__item">
-                        <p>
+                        <p id="flex_p1">
                             SpeedNet Logistics has become experts at adapting to changing market conditions and providing flexible solutions to meet your business needs. 
                             Our business model is asset light. This means we can quickly scale activities to match changes in market demand. 
                             We can also pick the best suppliers for any service depending on factors like reliability, 
@@ -134,9 +140,9 @@
             </div>  
             <div class="vertical__content"> 
                 <div class="col col_left">
-                    <h1 class="vertical__heading"><span>Sustainability</span></h1>
+                    <h1 id="sust_h1" class="vertical__heading"><span>Sustainability</span></h1>
                     <div class="vertical__item">
-                        <p>
+                        <p id="sust_p1">
                             As a leader in transport and logistics, SpeedNet Logicstics has an important role to play in helping the industry transition 
                             to greener more environmentally friendly practices. We provide sustainable and efficient transport solutions through better planning, 
                             new technologies and innovative solutions. 
@@ -166,7 +172,8 @@
         const loader = document.getElementById("loader");
         loader.classList.add("hidden");
         });
-    </script>    
+    </script> 
     <script src="./scripts.js"></script>
+    <script src="languages.js"></script>
 </body> 
 </html>
